--- a/dlg4nlp-iclr22/assets/css/main.css
+++ b/dlg4nlp-iclr22/assets/css/main.css
@@ -39,6 +39,17 @@ body {
 	width:100%;
 }
 
+#images{
+    text-align:center;
+    margin:50px auto;
+}
+#images a{
+    margin:0px 10px;
+    display:inline-block;
+    text-decoration:none;
+    /* color:black; */
+}
+
 ol, ul {
 	list-style: none;
 }
