--- a/dlg4nlp-naacl22/assets/css/main.css
+++ b/dlg4nlp-naacl22/assets/css/main.css
@@ -33,6 +33,12 @@ body {
 	line-height: 1;
 }
 
+.myline{
+	margin:-0.5em auto;
+	border-bottom:1px solid rgb(224, 224, 224);
+	width:100%;
+}
+
 ol, ul {
 	list-style: none;
 }
